# ikiru

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
core/: README.md
lib/: instance.rs  lib.rs
lib/cafe/: baseinfo.rs  mod.rs
lib/cpu/backend/: llvm.rs  mod.rs
lib/cpu/backend/interp/: mod.rs
macro/: Cargo.toml
macro/src/: derive_reg.rs  lib.rs  tests.rs
retroarch/: Cargo.toml
retroarch/src/: lib.rs
src/: app.rs  cfg.rs  cli.rs  emu.rs  gfx.rs  lib.rs  main.rs
src/app/: cfg.rs  emu.rs  hub.rs  mod.rs
src/app/cfg/: input.rs  mod.rs
src/cfg/: game.rs  input.rs  mod.rs  profile.rs
src/cfg/input/: profile.rs  xinput.rs
src/emu/: instance.rs  mod.rs
src/emu/cafe/hle/: mod.rs
src/emu/cafe/hle/gx2/: mod.rs
src/emu/cafe/hw/: mod.rs
src/emu/cafe/os/: common.rs
src/emu/cpu/: mod.rs  reg.rs
src/emu/cpu/backend/: cranelift.rs  mod.rs
src/emu/cpu/frontend/: disassembler.rs  mod.rs
src/emu/gpu/: mod.rs
src/emu/gpu/latte/: mod.rs  reg.rs
src/emu/gpu/shader/: mod.rs
src/game/: app.rs  meta.rs  mod.rs  title_id.rs
src/misc/: title_id.rs
src/misc/graphic_pack/: cfg.rs
src/util/: mod.rs  title_id.rs
src/util/graphic_pack/: mod.rs  shader.rs
tests/: it_works.rs
