[package]
name = "ikiru"
version = "0.1.0"
edition = "2021"
authors = ["Cameron Ward <cameronuward@gmail.com>"]
license = "MPL-2.0"

[workspace]
members = ["macro"]

[dependencies]
arrayvec = { version = "0.7.2", features = ["serde"] }
ash = "0.37.3"
autopad = "1.0.0"
bitvec = "1.0.1"
bytemuck = "1.13.1"
byteorder = "1.4.3"
clap = { version = "4.3.3", features = ["derive", "env", "wrap_help"] }
color-eyre = "0.6.2"
derive_builder = "0.12.0"
dirs = "5.0.1"
eframe = { version = "0.22.0", features = ["wayland", "wgpu"] }
egui = "0.22.0"
enum_dispatch = "0.3.11"
eyre = "0.6.8"
humantime = "2.1.0"
meval = "0.2.0"
oneshot = "0.1.5"
pkg-version = "1.0.0"
serde = { version = "1.0.163", features = ["derive"] }
smallvec = "1.10.0"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
thread_local = "1.1.7"
tokio = { version = "1.28.2", features = ["full"] }
toml_edit = { version = "0.19.10", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["serde", "fast-rng", "v4"] }
winit = "0.28.6"

[dependencies.gilrs]
version = "0.10.2"
default-features = false
features = ["xinput", "serde", "serde-serialize"]

[dependencies.ikiru-macro]
path = "macro"

[dev-dependencies.ikiru-macro]
path = "macro"
